--- a/app/views/challenges/_american.html.erb
+++ b/app/views/challenges/_american.html.erb
@@ -173,15 +173,15 @@
 					<div class="row" id="american-milieu-5">
 						<div class="stat1">
 							<%= @challenge.count_for+@challenge.count_against%>
-							<%= image_tag("icone-debat-3.png", alt: "Moutoners", class: "image")%>
+							<%= image_tag("icone-debat-3.png", alt: "Moutoners", class: "image-bulle11")%>
 							|
 
 							<span class="stat2"><%= @challenge.arguments.count%></span>
-							<%= image_tag("icone-debat.png", alt: "Moutoners", class: "image")%>
+							<%= image_tag("icone-debat.png", alt: "Moutoners", class: "image-bulle12")%>
 							|
 
 							<span class="stat2"><%= @challenge.comments.count%></span>
-							<%= image_tag("icone-debat-2.png", alt: "Moutoners", class: "image")%>
+							<%= image_tag("icone-debat-2.png", alt: "Moutoners", class: "image-bulle13")%>
 
 						</div>
 					</div>					
@@ -312,6 +312,13 @@
 	   		<%end%>
 	   		</div>
 	   	</div>
+	
+		<div class="row" id="explications">
+			<%= image_tag("bulle-explication-01.png", class: "bulle1")%>
+			<%= image_tag("bulle-explication1-01.png", class: "bulle2")%>
+			<%= image_tag("bulle-explication0-01.png", class: "bulle3")%>													
+		</div>
+	
 		
 		
 		<% if !@challenge.context == nil%>
