--- a/app/assets/stylesheets/challenges.css.scss
+++ b/app/assets/stylesheets/challenges.css.scss
@@ -424,7 +424,25 @@
 
 
 #challenge{
-
+	
+	#share2{
+		margin-left: 20px;
+		margin-bottom: 20px;
+		background-color: #808080;
+		min-height:50px;
+		width: 100px;
+		border-radius: 12px;
+		padding: 5px;
+	 	text-align: center;
+		color: white;
+		line-height: 20px;
+		font-family:"gotham-Bold";
+		font-size: 16px;
+		
+		a:hover{
+			color: white;
+		}
+	}
 	#inviterchallenge{
 		margin-left: 204px;
 		margin-top: 30px;
@@ -686,6 +704,25 @@
 		cursor:  pointer;
 		border-top: 15px solid #FFF;
 	}
+	}
+	
+	#explications{
+	margin-left: 550px;
+	margin-top:-60px;
+	position: relative;
+	z-index: 10;
+	
+		.bulle1{
+		margin-top:-70px;
+		}
+		.bulle2{
+		margin-top:-70px;
+		margin-left: 115px;
+		}
+		.bulle3{
+		margin-top:-70px;
+		margin-left: 230px;		
+		}
 	}
 	
 	#effective-context{
@@ -1347,7 +1384,17 @@
 				margin-bottom:15px;
 				
 				.stat1{
-					.image{
+					.image-bulle11{
+					padding-bottom:5px;
+					margin-left:7px;
+					margin-right: 20px;
+					}
+					.image-bulle12{
+					padding-bottom:5px;
+					margin-left:7px;
+					margin-right: 20px;
+					}
+					.image-bulle13{
 					padding-bottom:5px;
 					margin-left:7px;
 					margin-right: 20px;
@@ -1360,7 +1407,24 @@
 				}
 		}
 	}
+	#explications{
+	margin-left: 370px;
+	margin-top:-30px;
+	position: relative;
+	z-index: 1000;
 	
+		.bulle1{
+		margin-top:-30px;
+		}
+		.bulle2{
+		margin-top:-30px;
+		margin-left: 115px;
+		}
+		.bulle3{
+		margin-top:-30px;
+		margin-left: 230px;		
+		}
+	}
 	
 	#position-aleatoire{
 		background-color:#808080;
@@ -1380,6 +1444,8 @@
 		}
 		}
 	}
+	
+	
 	
 	#pousse-gauche{
 		margin-left:170px;
@@ -1462,7 +1528,7 @@
 		font-size: 16px;
 		color: #FFF;
 		padding-left: 12px;
-		padding-top:2px;
+		padding-top:4px;
 		
 	}
 	.arrow-left{
@@ -2016,7 +2082,17 @@
 				margin-bottom:15px;
 				
 				.stat1{
-					.image{
+					.image-bulle01{
+					padding-bottom:5px;
+					margin-left:7px;
+					margin-right: 20px;
+					}
+					.image-bulle02{
+					padding-bottom:5px;
+					margin-left:7px;
+					margin-right: 20px;
+					}
+					.image-bulle03{
 					padding-bottom:5px;
 					margin-left:7px;
 					margin-right: 20px;
@@ -2056,7 +2132,27 @@
 	#pousse-gauche2{
 		margin-left:396px;
 	}
-
+	
+	
+	#explications{
+	margin-left: 360px;
+	margin-top:-30px;
+	position: relative;
+	z-index: 1000;
+	
+		.bulle1{
+		margin-top:-40px;
+		}
+		.bulle2{
+		margin-top:-40px;
+		margin-left: 115px;
+		}
+		.bulle3{
+		margin-top:-40px;
+		margin-left: 230px;		
+		}
+	}
+	
 	#share{
 	margin-left: 420px;
 	margin-bottom: 20px;
@@ -2130,7 +2226,7 @@
 		font-size: 16px;
 		color: #FFF;
 		padding-left: 12px;
-		padding-top:2px;
+		padding-top:4px;
 	
 	}
 	.arrow-left{
@@ -2996,7 +3092,17 @@
 				margin-bottom:15px;
 				
 				.stat1{
-					.image{
+					.image-bulle21{
+					padding-bottom:5px;
+					margin-left:7px;
+					margin-right: 20px;
+					}
+					.image-bulle22{
+					padding-bottom:5px;
+					margin-left:7px;
+					margin-right: 20px;
+					}
+					.image-bulle23{
 					padding-bottom:5px;
 					margin-left:7px;
 					margin-right: 20px;
@@ -3007,6 +3113,25 @@
 				margin-top: 0px;
 				}
 				}
+		}
+	}
+	
+	#explications{
+	margin-left: 370px;
+	margin-top:-30px;
+	position: relative;
+	z-index: 1000;
+	
+		.bulle1{
+		margin-top:-60px;
+		}
+		.bulle2{
+		margin-top:-60px;
+		margin-left: 115px;
+		}
+		.bulle3{
+		margin-top:-60px;
+		margin-left: 230px;		
 		}
 	}
 	
@@ -3110,7 +3235,7 @@
 		font-size: 16px;
 		color: #FFF;
 		padding-left: 12px;
-		padding-top:2px;
+		padding-top:4px;
 	
 	}
 	.arrow-left{
@@ -4225,7 +4350,16 @@
 				margin-bottom:15px;
 				
 				.stat1{
-					.image{
+					.image-bulle31{
+					padding-bottom:5px;
+					margin-left:7px;
+					margin-right: 20px;
+					}
+					.image-bulle32{
+					padding-bottom:5px;
+					margin-left:7px;
+					margin-right: 20px;
+					}.image-bulle33{
 					padding-bottom:5px;
 					margin-left:7px;
 					margin-right: 20px;
@@ -4239,6 +4373,24 @@
 		}
 	}
 	
+	#explications{
+	margin-left: 370px;
+	margin-top:-30px;
+	position: relative;
+	z-index: 1000;
+	
+		.bulle1{
+		margin-top:-90px;
+		}
+		.bulle2{
+		margin-top:-90px;
+		margin-left: 115px;
+		}
+		.bulle3{
+		margin-top:-90px;
+		margin-left: 230px;		
+		}
+	}
 	
 	#position-aleatoire{
 		background-color:#808080;
@@ -4341,7 +4493,7 @@
 		font-size: 16px;
 		color: #FFF;
 		padding-left: 12px;
-		padding-top:2px;
+		padding-top:4px;
 	
 	}
 	.arrow-left{
