--- a/app/assets/stylesheets/debates.css.scss
+++ b/app/assets/stylesheets/debates.css.scss
@@ -220,43 +220,29 @@
 			padding: 5px 9px 5px 9px;
 			
 			.oui{
-			color: white;
+			color: black;
 			}
 		}
 		
 		.oui-oui:hover{
-		background-color: #AAD0FF;
+		background-color: #FF7575;
+		color: black;
 		}
 		.oui-oui2{
 			margin-top: -5px;
 			margin-left:30px;
-			background-color: #AAD0FF;
+			background-color: #FF7575;
 			font-family: "bebasneue-webfont";
 			font-size: 25px;
 			padding: 5px 9px 5px 9px;
+		border: 1px Solid white;			
 			
 			.oui{
-			color: white;
+			color: black;
 			}
 		}
 		
 		.suisse-suisse{
-			margin-top: -5px;
-			margin-left:8px;
-			background-color: #FF6969;
-			font-family: "bebasneue-webfont";
-			font-size: 25px;
-			padding: 5px 12px 5px 12px;
-			
-			.suisse{
-			color: white;
-			}
-		}
-		
-		.suisse-suisse:hover{
-		background-color: #808080;
-		}
-		.suisse-suisse2{
 			margin-top: -5px;
 			margin-left:8px;
 			background-color: #808080;
@@ -269,10 +255,25 @@
 			}
 		}
 		
+		.suisse-suisse:hover{
+		background-color: #FF7575;
+		color: black;
+		}
+		.suisse-suisse2{
+			margin-top: -5px;
+			margin-left:8px;
+			background-color: #FF7575;
+			font-family: "bebasneue-webfont";
+			font-size: 25px;
+			padding: 5px 12px 5px 12px;
+		border: 1px Solid white;			
+			
+		}
+		
 		.non-non{
 			margin-top: -5px;
 			margin-left:8px;
-			background-color: #FFF;
+			background-color: #808080;
 			font-family: "bebasneue-webfont";
 			font-size: 25px;
 			padding: 5px 9px 5px 9px;
@@ -283,7 +284,8 @@
 		}
 			
 			.non-non:hover{
-			background-color: #FF6969;
+			background-color: #FF7575;
+			color: black;
 			}
 			
 			.non-non2{
@@ -293,6 +295,7 @@
 				font-family: "bebasneue-webfont";
 				font-size: 25px;
 				padding: 5px 9px 5px 9px;
+		border: 1px Solid white;				
 
 				.non{
 				color: black;
@@ -308,7 +311,17 @@
 			margin-top:10px;
 			margin-bottom: 10px;
 
-			.image{
+			.image-bulle1{
+			padding-bottom:5px;
+			margin-left:7px;
+			margin-right: 20px;
+			}
+			.image-bulle2{
+			padding-bottom:5px;
+			margin-left:7px;
+			margin-right: 20px;
+			}
+			.image-bulle3{
 			padding-bottom:5px;
 			margin-left:7px;
 			margin-right: 20px;
@@ -386,6 +399,25 @@
 	margin-left:10px;
 	margin-top:-48px;
 	}
+	}
+	
+	#explications{
+	margin-left: 550px;
+	margin-top:-60px;
+	position: relative;
+	z-index: 10;
+	
+		.bulle1{
+		margin-top:-70px;
+		}
+		.bulle2{
+		margin-top:-70px;
+		margin-left: 115px;
+		}
+		.bulle3{
+		margin-top:-70px;
+		margin-left: 230px;		
+		}
 	}
 	
 	#share2{
@@ -491,12 +523,12 @@
 		padding: 5px 9px 5px 9px;
 		
 		.oui{
-		color: white;
+		color: black;
 		}
 	}
 	
 	.oui-oui:hover{
-	background-color: #AAD0FF;
+	background-color: #FF7575;
 	}
 	.oui-oui2{
 		margin-top: -5px;
@@ -507,27 +539,11 @@
 		padding: 5px 9px 5px 9px;
 		
 		.oui{
-		color: white;
+		color: black;
 		}
 	}
 	
 	.suisse-suisse{
-		margin-top: -5px;
-		margin-left:8px;
-		background-color: #FF6969;
-		font-family: "bebasneue-webfont";
-		font-size: 25px;
-		padding: 5px 12px 5px 12px;
-		
-		.suisse{
-		color: white;
-		}
-	}
-	
-	.suisse-suisse:hover{
-	background-color: #808080;
-	}
-	.suisse-suisse2{
 		margin-top: -5px;
 		margin-left:8px;
 		background-color: #808080;
@@ -540,10 +556,26 @@
 		}
 	}
 	
+	.suisse-suisse:hover{
+	background-color: #FF7575;
+	}
+	.suisse-suisse2{
+		margin-top: -5px;
+		margin-left:8px;
+		background-color: #FF7575;
+		font-family: "bebasneue-webfont";
+		font-size: 25px;
+		padding: 5px 12px 5px 12px;
+		
+		.suisse{
+		color: white;
+		}
+	}
+	
 	.non-non{
 		margin-top: -5px;
 		margin-left:8px;
-		background-color: #FFF;
+		background-color: #808080;
 		font-family: "bebasneue-webfont";
 		font-size: 25px;
 		padding: 5px 9px 5px 9px;
@@ -1092,7 +1124,7 @@ border-bottom: 1px Solid black;
 	.suivant{
 	width: 149px;
 	height: 30px;
-	background-color: #839AB2;
+	background-color: #FF7575;
 	margin-top: -28px;
 	margin-left: 415px;
 	font-family: "georgia";
@@ -1236,44 +1268,28 @@ border-image: url(border2.png) 13 fill repeat;
 		padding: 5px 9px 5px 9px;
 		
 		.oui{
-		color: white;
+		color: black;
 		}
 	}
 	
 	.oui-oui:hover{
-	background-color: #AAD0FF;
+	background-color: #FF7575;
 	}
 	.oui-oui2{
 		margin-top: -5px;
 		margin-left:30px;
-		background-color: #AAD0FF;
+		background-color: #FF7575;
 		font-family: "bebasneue-webfont";
 		font-size: 25px;
 		padding: 5px 9px 5px 9px;
 		border: 1px Solid white;
 		
 		.oui{
-		color: white;
+		color: black;
 		}
 	}
 	
 	.suisse-suisse{
-		margin-top: -5px;
-		margin-left:8px;
-		background-color: #FF6969;
-		font-family: "bebasneue-webfont";
-		font-size: 25px;
-		padding: 5px 12px 5px 12px;
-		
-		.suisse{
-		color: white;
-		}
-	}
-	
-	.suisse-suisse:hover{
-	background-color: #808080;
-	}
-	.suisse-suisse2{
 		margin-top: -5px;
 		margin-left:8px;
 		background-color: #808080;
@@ -1286,10 +1302,27 @@ border-image: url(border2.png) 13 fill repeat;
 		}
 	}
 	
+	.suisse-suisse:hover{
+	background-color: #FF7575;
+	}
+	.suisse-suisse2{
+		margin-top: -5px;
+		margin-left:8px;
+		background-color: #FF7575;
+		font-family: "bebasneue-webfont";
+		font-size: 25px;
+		padding: 5px 12px 5px 12px;
+		border: 1px Solid white;		
+		
+		.suisse{
+		color: white;
+		}
+	}
+	
 	.non-non{
 		margin-top: -5px;
 		margin-left:8px;
-		background-color: #FFF;
+		background-color: #808080;
 		font-family: "bebasneue-webfont";
 		font-size: 25px;
 		padding: 5px 9px 5px 9px;
@@ -1310,6 +1343,7 @@ border-image: url(border2.png) 13 fill repeat;
 			font-family: "bebasneue-webfont";
 			font-size: 25px;
 			padding: 5px 9px 5px 9px;
+		border: 1px Solid white;			
 
 			.non{
 			color: black;
