--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -359,8 +359,9 @@
 	}
 	
 	#container-activ3{
-	background-color: red;
+	margin-top: -15px;
 	width: 650px;
+	margin-left: 15px;
 	}
 	
 	#container-activ2{
