--- a/app/views/challenges/_british.html.erb
+++ b/app/views/challenges/_british.html.erb
@@ -340,15 +340,15 @@
 					<div class="row" id="british-milieu-5">
 						<div class="stat1">
 							<%= @challenge.count_for+@challenge.count_against+@challenge.count_upup+@challenge.count_downdown%>
-							<%= image_tag("icone-debat-3.png", alt: "Moutoners", class: "image")%>
+							<%= image_tag("icone-debat-3.png", alt: "Moutoners", class: "image-bulle31")%>
 							|
 
 							<span class="stat2"><%= @challenge.arguments.count%></span>
-							<%= image_tag("icone-debat.png", alt: "Moutoners", class: "image")%>
+							<%= image_tag("icone-debat.png", alt: "Moutoners", class: "image-bulle32")%>
 							|
 
 							<span class="stat2"><%= @challenge.comments.count%></span>
-							<%= image_tag("icone-debat-2.png", alt: "Moutoners", class: "image")%>
+							<%= image_tag("icone-debat-2.png", alt: "Moutoners", class: "image-bulle33")%>
 
 						</div>
 					</div>					
@@ -593,6 +593,13 @@
 	   		<%end%>
 	   		</div>
 	   	</div>		
+	
+		<div class="row" id="explications">
+			<%= image_tag("bulle-explication-01.png", class: "bulle1")%>
+			<%= image_tag("bulle-explication1-01.png", class: "bulle2")%>
+			<%= image_tag("bulle-explication0-01.png", class: "bulle3")%>													
+		</div>
+	
 		
 		<% if !@challenge.context == nil%>
 		<div class="row">
