--- a/app/views/challenges/_lincoln_douglas.html.erb
+++ b/app/views/challenges/_lincoln_douglas.html.erb
@@ -126,15 +126,15 @@
 				<div class="row" id="ld-milieu-5">
 					<div class="stat1">
 						<%= @challenge.count_for+@challenge.count_against%>
-						<%= image_tag("icone-debat-3.png", alt: "Moutoners", class: "image")%>
+						<%= image_tag("icone-debat-3.png", alt: "Moutoners", class: "image-bulle01")%>
 						|
 				
 						<span class="stat2"><%= @challenge.arguments.count%></span>
-						<%= image_tag("icone-debat.png", alt: "Moutoners", class: "image")%>
+						<%= image_tag("icone-debat.png", alt: "Moutoners", class: "image-bulle02")%>
 						|
 				
 						<span class="stat2"><%= @challenge.comments.count%></span>
-						<%= image_tag("icone-debat-2.png", alt: "Moutoners", class: "image")%>
+						<%= image_tag("icone-debat-2.png", alt: "Moutoners", class: "image-bulle03")%>
 	
 					</div>
 				</div>	
@@ -223,7 +223,12 @@
 	   		</div>
 	   	</div>
 
-	
+		<div class="row" id="explications">
+			<%= image_tag("bulle-explication-01.png", class: "bulle1")%>
+			<%= image_tag("bulle-explication1-01.png", class: "bulle2")%>
+			<%= image_tag("bulle-explication0-01.png", class: "bulle3")%>													
+		</div>
+		
 		<% if !@challenge.context == nil%>
 		<div class="row">
 			<div class "row" id="to-be-closed">
