--- a/app/views/shared/_home_badge2.html.erb
+++ b/app/views/shared/_home_badge2.html.erb
@@ -33,19 +33,26 @@
 							<% if current_user && debate.in_deb?(current_user) && debate.valeur_vote(current_user) == 1.0 %>
 				 			<li class="oui-oui2"><%= link_to "OUI", vote_debate_path(debate, type: "up"), method: "post", :class => "oui" %>
 							</li>
-							<% else%>
+							<% elsif current_user%>
 				 			<li class="oui-oui"><%= link_to "OUI", vote_debate_path(debate, type: "up"), method: "post", :class => "oui" %>
-							</li>							
+							</li>
+							<% else%>
+				 			<li class="oui-oui"><%= link_to "OUI", new_user_session_path, :class => "oui" %>
+							</li>														
 							<% end%>
 							<% if current_user && debate.in_deb?(current_user) && debate.valeur_vote(current_user) == 0.0 %>
 							<li class="suisse-suisse2"><%= link_to image_tag("croix-suisse.png"), vote_debate_path(debate, type: "neutral"), method: "post", class: "suisse" %></li>
-							<% else%>
+							<% elsif current_user%>
 							<li class="suisse-suisse"><%= link_to image_tag("croix-suisse.png"), vote_debate_path(debate, type: "neutral"), method: "post", class: "suisse" %></li>
+							<% else%>
+							<li class="suisse-suisse"><%= link_to image_tag("croix-suisse.png"), new_user_session_path, class: "suisse" %></li>							
 							<%end%>
 							<% if current_user && debate.in_deb?(current_user) && debate.valeur_vote(current_user) == -1.0 %>
 							<li class="non-non2"><%= link_to "NON", vote_debate_path(debate, type: "down"), method: "post", :class => "non" %></li>				
-							<%else%>
-							<li class="non-non"><%= link_to "NON", vote_debate_path(debate, type: "down"), method: "post", :class => "non" %></li>							
+							<%elsif current_user%>
+							<li class="non-non"><%= link_to "NON", vote_debate_path(debate, type: "down"), method: "post", :class => "non" %></li>	
+							<% else%>
+							<li class="non-non"><%= link_to "NON", new_user_session_path, :class => "non" %></li>														
 							<%end%>
 						</div>
 						
