--- a/app/views/debates/show.html.erb
+++ b/app/views/debates/show.html.erb
@@ -8,6 +8,7 @@
 					<div><%= link_to "promote4", promote4_debate_path(@debate), class: "text"%>  </div>
 					<div><%= link_to "promote5", promote5_debate_path(@debate), class: "text"%>  </div>
 					<div><%= link_to "edit",edit_debate_path(@debate), class: "text"%>    </div>                                                        
+					<div><%= link_to "publush",publish_debate_path(@debate), class: "text"%>    </div>                                                        
 		</div>                                                                
 		<% end %>		
 		
