--- a/app/assets/stylesheets/challenges.css.scss
+++ b/app/assets/stylesheets/challenges.css.scss
@@ -454,6 +454,7 @@
 		padding: 7px 7px 0px 7px;
 		font-size: 18px;
 		background-color: #808080;
+
 			.link{
 			color: white;
 			}
@@ -480,6 +481,20 @@
 		font-family: "georgia";
 		margin-top: -30px;
 		margin-bottom: 30px;
+		border-bottom: 1px Solid white;	
+		
+		.invitation2{
+		width: 170px;
+		height:40px;
+		margin: -10px 0px 0px -10px;
+		background-color: #FF7575;
+		font-style: italic;
+		font-size: 14px;
+		font-family: "georgia";
+		border: none;
+		border-radius: 0px;	
+		color: black;
+		}	
 		}
 	}
 	
