--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -9,6 +9,7 @@ font-size: 16px;
 font-style: italic;
 font-weight: bold;
 margin-top:23px;
+margin-bottom:18px;
 width:1060px;
 margin-left: 20px;
 text-align: center;
@@ -17,6 +18,7 @@ text-align: center;
 #holy{
 	margin-left: 115px;
 	margin-top: 5px;
+	margin-bottom: 23px;
 }
 
   
