--- a/app/assets/stylesheets/challenges.css.scss
+++ b/app/assets/stylesheets/challenges.css.scss
@@ -790,6 +790,14 @@
 	margin-left:250px;
 	}
 	
+	.comment-texte3{
+	padding-top:10px;
+	font-family: "gotham";
+	font-size:18px;
+	color: #000000;
+text-align: center;
+	}
+	
 	.arrow-up-comments {
 		margin-left:700px;
 		margin-top:-18px;
