--- a/app/views/challenges/_lincoln_douglas.html.erb
+++ b/app/views/challenges/_lincoln_douglas.html.erb
@@ -267,7 +267,7 @@
 				<% else%>
 				
 				<%end%>
-			<% elsif ["second","third","forth","fifth","sixth","seventh","eighth","over", "judged", "judged_one"].include?(@challenge.state) %>
+			<% elsif ["second","third","forth","fifth","sixth","seventh","eighth","over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 				<%= render "shared/argument_badge", argument: @challenge.first_argument %>
 			<% end %>
 		</div>		
@@ -286,7 +286,7 @@
 					<% end %>
 				<% else%>
 				<%end%>
-			<% elsif ["third","forth","fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
+			<% elsif ["third","forth","fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 				<%= render "shared/argument_contre_badge", argument: @challenge.second_argument %>
 			<% end %>	
 		</div>
@@ -305,7 +305,7 @@
 					<% end %>
 				<% else%>
 				<%end%>
-			<% elsif ["forth","fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
+			<% elsif ["forth","fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 				<%= render "shared/argument_badge", argument: @challenge.third_argument %>
 			<% end %>	
 		</div>
@@ -324,7 +324,7 @@
 					<% end %>
 				<% else%>
 				<%end%>
-			<% elsif ["fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
+			<% elsif ["fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 				<%= render "shared/argument_contre_badge", argument: @challenge.fourth_argument %>
 			<% end %>	
 		</div>
@@ -343,7 +343,7 @@
 					<% end %>
 				<% else%>
 				<%end%>
-			<% elsif ["sixth","seventh","eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
+			<% elsif ["sixth","seventh","eighth" ,"over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 				<%= render "shared/argument_badge", argument: @challenge.fifth_argument %>
 			<% end %>	
 		</div>
@@ -361,7 +361,7 @@
 					<% end %>
 				<% else%>
 				<%end%>
-			<% elsif ["seventh","eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
+			<% elsif ["seventh","eighth" ,"over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 				<%= render "shared/argument_contre_badge", argument: @challenge.sixth_argument %>
 			<% end %>	
 		</div>
@@ -379,7 +379,7 @@
 					<% end %>
 				<% else%>
 				<%end%>
-			<% elsif ["eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
+			<% elsif ["eighth" ,"over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 				<%= render "shared/argument_badge", argument: @challenge.seventh_argument %>
 			<% end %>	
 		</div>
@@ -397,7 +397,7 @@
 					<% end %>
 				<% else%>
 				<%end%>
-			<% elsif ["over", "judged", "judged_one"].include?(@challenge.state) %>
+			<% elsif ["over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 				<%= render "shared/argument_contre_badge", argument: @challenge.eighth_argument %>
 			<% end %>	
 		</div>
