--- a/app/views/challenges/_american.html.erb
+++ b/app/views/challenges/_american.html.erb
@@ -357,7 +357,7 @@
 					<% else%>
 
 					<%end%>
-				<% elsif ["second","third","forth","fifth","sixth","seventh","eighth","over", "judged", "judged_one"].include?(@challenge.state) %>
+				<% elsif ["second","third","forth","fifth","sixth","seventh","eighth","over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 					<%= render "shared/argument_badge", argument: @challenge.first_argument %>
 				<% end %>
 			</div>					
@@ -376,7 +376,7 @@
 						<% end %>
 					<% else%>
 					<%end%>
-				<% elsif ["third","forth","fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
+				<% elsif ["third","forth","fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 					<%= render "shared/argument_contre_badge", argument: @challenge.second_argument %>
 				<% end %>	
 			</div>
@@ -396,7 +396,7 @@
 						<% end %>
 					<% else%>
 					<%end%>
-				<% elsif ["forth","fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
+				<% elsif ["forth","fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 					<%= render "shared/argument_badge", argument: @challenge.third_argument %>
 				<% end %>	
 			</div>
@@ -415,7 +415,7 @@
 						<% end %>
 					<% else%>
 					<%end%>
-				<% elsif ["fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
+				<% elsif ["fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 					<%= render "shared/argument_contre_badge", argument: @challenge.fourth_argument %>
 				<% end %>	
 			</div>
@@ -434,7 +434,7 @@
 						<% end %>
 					<% else%>
 					<%end%>
-				<% elsif ["sixth","seventh","eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
+				<% elsif ["sixth","seventh","eighth" ,"over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 					<%= render "shared/argument_contre_badge", argument: @challenge.fifth_argument %>
 				<% end %>	
 			</div>
@@ -452,7 +452,7 @@
 						<% end %>
 					<% else%>
 					<%end%>
-				<% elsif ["seventh","eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
+				<% elsif ["seventh","eighth" ,"over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 					<%= render "shared/argument_badge", argument: @challenge.sixth_argument %>
 				<% end %>	
 			</div>
