--- a/app/views/challenges/_british.html.erb
+++ b/app/views/challenges/_british.html.erb
@@ -638,7 +638,7 @@
 					<% else%>
 
 					<%end%>
-				<% elsif ["second","third","forth","fifth","sixth","seventh","eighth","over", "judged", "judged_one"].include?(@challenge.state) %>
+				<% elsif ["second","third","forth","fifth","sixth","seventh","eighth","over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 					<%= render "shared/argument_badge", argument: @challenge.first_argument %>
 				<% end %>
 			</div>					
@@ -657,7 +657,7 @@
 						<% end %>
 					<% else%>
 					<%end%>
-				<% elsif ["third","forth","fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
+				<% elsif ["third","forth","fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 					<%= render "shared/argument_contre_badge", argument: @challenge.second_argument %>
 				<% end %>	
 			</div>
@@ -677,7 +677,7 @@
 						<% end %>
 					<% else%>
 					<%end%>
-				<% elsif ["forth","fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
+				<% elsif ["forth","fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 					<%= render "shared/argument_badge", argument: @challenge.third_argument %>
 				<% end %>	
 			</div>
@@ -696,7 +696,7 @@
 						<% end %>
 					<% else%>
 					<%end%>
-				<% elsif ["fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
+				<% elsif ["fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 					<%= render "shared/argument_contre_badge", argument: @challenge.fourth_argument %>
 				<% end %>	
 			</div>
@@ -715,7 +715,7 @@
 					<% else%>
 
 					<%end%>
-				<% elsif ["sixth","seventh","eighth","over", "judged", "judged_one"].include?(@challenge.state) %>
+				<% elsif ["sixth","seventh","eighth","over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 					<%= render "shared/argument_fc1_badge", argument: @challenge.fifth_argument %>
 				<% end %>
 			</div>					
@@ -734,7 +734,7 @@
 						<% end %>
 					<% else%>
 					<%end%>
-				<% elsif ["seventh","eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
+				<% elsif ["seventh","eighth" ,"over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 					<%= render "shared/argument_fc2_badge", argument: @challenge.sixth_argument %>
 				<% end %>	
 			</div>
@@ -754,7 +754,7 @@
 						<% end %>
 					<% else%>
 					<%end%>
-				<% elsif ["eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
+				<% elsif ["eighth" ,"over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 					<%= render "shared/argument_fc1_badge", argument: @challenge.seventh_argument %>
 				<% end %>	
 			</div>
@@ -773,7 +773,7 @@
 						<% end %>
 					<% else%>
 					<%end%>
-				<% elsif ["over", "judged", "judged_one"].include?(@challenge.state) %>
+				<% elsif ["over", "judged", "judged_one","homepage"].include?(@challenge.state) %>
 					<%= render "shared/argument_fc2_badge", argument: @challenge.eighth_argument %>
 				<% end %>	
 			</div>
