--- a/app/views/challenges/_lincoln_douglas.html.erb
+++ b/app/views/challenges/_lincoln_douglas.html.erb
@@ -379,7 +379,7 @@
 					<% end %>
 				<% else%>
 				<%end%>
-			<% elsif ["eighth" ,"over", "judged", "judged_one".include?(@challenge.state) %>
+			<% elsif ["eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
 				<%= render "shared/argument_badge", argument: @challenge.seventh_argument %>
 			<% end %>	
 		</div>
